--- a/.github/workflows/wine.yaml
+++ b/.github/workflows/wine.yaml
@@ -16,7 +16,11 @@ jobs:
             python train.py
   
             
-            echo "MODEL METRICS"
-            cat metrics.txt
-          #cat results.txt >> report.md
-          #cml send-comment report.md
+            echo "## MODEL METRICS" > report.md
+            cat metrics.txt >> report.md
+            
+            echo "## Data report">> report.md
+            cml-publish feature_importance.png --md >> report.md
+            cml-publish residual.png --md >> report.md
+            
+            cml-send-commend report.md
